--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="SwaggerUI" />
-    <title>SwaggerUI</title>
+    <meta name="description" content="Pricempire.com API Documentation" />
+    <title>Developers | Pricempire.com</title>
     <link rel="stylesheet" href="https://unpkg.com/swagger-ui-dist@4.5.0/swagger-ui.css" />
     <link rel="stylesheet" href="dark.css" />
     <script src='openapi.js' type="text/javascript"></script>
