--- a/index.html
+++ b/index.html
@@ -9,9 +9,48 @@
     <link rel="stylesheet" href="https://unpkg.com/swagger-ui-dist@4.5.0/swagger-ui.css" />
     <link rel="stylesheet" href="dark.css" />
     <script src='openapi.js' type="text/javascript"></script>
+    <style>
+        * {
+            font-family: sans-serif;
+        }
+        .header{
+            box-sizing: border-box;
+            margin: 0 auto;
+            max-width: 91.25rem;
+            padding: 0 1.25rem;
+            width: 100%;
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="header">
+        <h1>Pricempire.com - API Documentation</h1>
+        <article>
+            Welcome to the API developer documentation for [Insert API Name]. This documentation is designed to provide developers
+            with all the information they need to integrate with our API and build applications that make use of its functionality.
+        </article>
+        
+        <article>
+            The Pricempire.com API is a RESTful API that provides access to Pricempire.
+        </article>
+        <article>
+            In this documentation, you will find information about how to authenticate with the API, how to make requests to the
+            API, and how to interpret the responses that the API returns. You will also find detailed descriptions of the API's
+            endpoints and their corresponding parameters and response codes.
+        </article>
+        <article>
+            If you have any questions or encounter any problems while using the API, please contact us at discord, or mail us at info@pricempire.com
+        </article>
+        <article>
+            We are excited to see what you will build with our API, and we look forward to supporting you on your development
+            journey. Let's get started!
+        </article>
+    </div>
     <div id="swagger-ui"></div>
     <script src="https://unpkg.com/swagger-ui-dist@4.5.0/swagger-ui-bundle.js" crossorigin></script>
     <script>
