--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="header">
         <h1>Pricempire.com - API Documentation</h1>
         <article>
-            Welcome to the API developer documentation for [Insert API Name]. This documentation is designed to provide developers
+            Welcome to the API developer documentation for Pricempire.com. This documentation is designed to provide developers
             with all the information they need to integrate with our API and build applications that make use of its functionality.
         </article>
         
