--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             margin: auto;
             display: flex;
             flex-direction: column;
-            gap: 20px;
+            gap: 1.25rem;
         }
     </style>
 </head>
