Added header image

--- a/index.html
+++ b/index.html
@@ -24,12 +24,33 @@
             flex-direction: column;
             gap: 1.25rem;
         }
+        .header img{
+            border-radius: 1.875rem;
+            margin-top: 1.25rem;
+            width: 100%;
+        }
+        .header .header-image h1{
+            position: absolute;
+            margin-top: 5rem;
+            margin-left: 2.5rem;
+        }
+        .header .header-image span{
+            position: absolute;
+            margin-top: 8.125rem;
+            margin-left: 2.5rem;
+        }
     </style>
 </head>
 
 <body>
-    <div class="header">
-        <h1>Pricempire.com - API Documentation</h1>
+    <div class="header"> 
+        <div class="header-image">
+            <h1>Pricempire.com</h1>
+            <span>
+                API Documentation
+            </span>
+            <img src="./header.png" />
+        </div>
         <article>
             Welcome to the API developer documentation for Pricempire.com. This documentation is designed to provide developers
             with all the information they need to integrate with our API and build applications that make use of its functionality.
