--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             margin-top: 8.125rem;
             margin-left: 2.5rem;
         }
+        article{
+            padding-left: 1.875rem;
+            padding-right: 1.875rem; 
+        }
     </style>
 </head>
 
