--- a/index.html
+++ b/index.html
@@ -4,16 +4,31 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Pricempire.com API Documentation" />
-    <title>Developers | Pricempire.com</title>
+    <meta name="description" content="Pricempire.com API Documentation for over 40 marketplaces." />
+    <meta name="keywords"
+        content="api, pricing api, CSGO, skins, pricempire, priceempire, buff.163.com, c5game.com, youpin, buff.market, csgoempire, tradeit, bitskins, cs.money, csgoroll, dmarket, cs.deals, lis-skins, nerf.app, shadowpay, steam, skinswap, cs.trade, tradeit, skinport.com csgo, skins, weapon, finishes, custom, virtual, market, trade, inventory, collection, gun, camouflage, pattern, design, rarity, value, knife, AK-47, M4A4, M4A1-S, Galil AR, Famas, SG 553, AUG, Glock-18, P2000, USP-S, P250, CZ75-Auto, Tec-9, Desert Eagle, R8 Revolver, P90, MP7, UMP-45, PP-Bizon, MAC-10, Nova, Sawed-Off, XM1014, Mag-7, Negev, M249, ZEUS x27.">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@pricempire" />
+    <meta name="Description" CONTENT="Pricempire.com API Documentation for over 40 marketplaces.">
+    <meta property="og:url" content="https://developers.pricempire.com/" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Pricempire.com API Documentation for over 40 marketplaces." />
+    <meta property="og:description" content="Pricempire.com API Documentation for over 40 marketplaces." />
+    <meta property="og:image" content="https://developers.pricempire.com/xxhdpi.png" />
+    <link rel="canonical" href="https://developers.pricempire.com/" />
+    <title>API Docs | Pricempire.com</title>
     <link rel="stylesheet" href="https://unpkg.com/swagger-ui-dist@4.5.0/swagger-ui.css" />
     <link rel="stylesheet" href="dark.css" />
     <script src='openapi.js' type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"
+        integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+
     <style>
         * {
             font-family: sans-serif;
         }
-        .header{
+
+        .header {
             box-sizing: border-box;
             margin: 0 auto;
             max-width: 91.25rem;
@@ -24,30 +39,34 @@
             flex-direction: column;
             gap: 1.25rem;
         }
-        .header img{
+
+        .header img {
             border-radius: 1.875rem;
             margin-top: 1.25rem;
             width: 100%;
         }
-        .header .header-image h1{
+
+        .header .header-image h1 {
             position: absolute;
             margin-top: 5rem;
             margin-left: 2.5rem;
         }
-        .header .header-image span{
+
+        .header .header-image span {
             position: absolute;
             margin-top: 8.125rem;
             margin-left: 2.5rem;
         }
-        article{
+
+        article {
             padding-left: 1.875rem;
-            padding-right: 1.875rem; 
+            padding-right: 1.875rem;
         }
     </style>
 </head>
 
 <body>
-    <div class="header"> 
+    <div class="header">
         <div class="header-image">
             <h1>Pricempire.com</h1>
             <span>
@@ -56,23 +75,29 @@
             <img src="./header.png" />
         </div>
         <article>
-            Welcome to the API developer documentation for Pricempire.com. This documentation is designed to provide developers
-            with all the information they need to integrate with our API and build applications that make use of its functionality.
+            Welcome to the API developer documentation for Pricempire.com. This documentation is designed to provide
+            developers
+            with all the information they need to integrate with our API and build applications that make use of its
+            functionality.
         </article>
-        
+
         <article>
             The Pricempire.com API is a RESTful API that provides access to Pricempire.
         </article>
         <article>
-            In this documentation, you will find information about how to authenticate with the API, how to make requests to the
-            API, and how to interpret the responses that the API returns. You will also find detailed descriptions of the API's
+            In this documentation, you will find information about how to authenticate with the API, how to make
+            requests to the
+            API, and how to interpret the responses that the API returns. You will also find detailed descriptions of
+            the API's
             endpoints and their corresponding parameters and response codes.
         </article>
         <article>
-            If you have any questions or encounter any problems while using the API, please contact us at discord, or mail us at info@pricempire.com
+            If you have any questions or encounter any problems while using the API, please contact us at discord, or
+            mail us at info@pricempire.com
         </article>
         <article>
-            We are excited to see what you will build with our API, and we look forward to supporting you on your development
+            We are excited to see what you will build with our API, and we look forward to supporting you on your
+            development
             journey. Let's get started!
         </article>
     </div>
@@ -80,9 +105,38 @@
     <script src="https://unpkg.com/swagger-ui-dist@4.5.0/swagger-ui-bundle.js" crossorigin></script>
     <script>
         window.onload = () => {
-            window.ui = SwaggerUIBundle({
-                spec: spec,
-                dom_id: '#swagger-ui',
+            $.getJSON('https://pricempire.com/api/v2/meta/providerKeys').then(keys => {
+                console.log(keys);
+                spec['paths']['v2/getAllItems']['get']['parameters'].push({
+                    "name": "source",
+                    "in": "query",
+                    "description": "Selected Providers (Comma separated: buff,csgoempire,csgoroll)",
+                    "required": false,
+                    "schema": {
+                        "type": "string",
+                        "format": "string",
+                        "example": 'buff163,skinport,csgoempire',
+                        "enum": keys
+                    }
+                })
+                spec['paths']['v3/getAllItems']['get']['parameters'].push({
+                    "name": "sources",
+                    "in": "query",
+                    "explode": true,
+                    "description": "Selected Providers (In array: &sources=buff&sources=csgoempire&sources=csgoroll)",
+                    "required": false,
+                    "schema": {
+                        "type": "array",
+                        "format": "string[]",
+                        "example": 'buff',
+                        "enum": keys
+                    }
+                })
+
+                window.ui = SwaggerUIBundle({
+                    spec,
+                    dom_id: '#swagger-ui',
+                });
             });
         };
     </script>
