--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 spec['paths']['v2/getItemByName/{market_hash_name}']['get']['parameters'].push({
                     "name": "source",
                     "in": "query",
-                    "description": "Selected Providers (In array: &sources=buff&sources=csgoempire&sources=csgoroll)",
+                    "description": "Selected Providers (Comma separated: buff,csgoempire,csgoroll)",
                     "required": false,
                     "schema": {
                         "type": "string",
