--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Pricempire.com API Documentation for over 40 marketplaces." />
+    <meta name="description" content="Pricempire.com Prices API Documentation for over CS:GO 40 marketplaces." />
     <meta name="keywords"
         content="api, pricing api, CSGO, skins, pricempire, priceempire, buff.163.com, c5game.com, youpin, buff.market, csgoempire, tradeit, bitskins, cs.money, csgoroll, dmarket, cs.deals, lis-skins, nerf.app, shadowpay, steam, skinswap, cs.trade, tradeit, skinport.com csgo, skins, weapon, finishes, custom, virtual, market, trade, inventory, collection, gun, camouflage, pattern, design, rarity, value, knife, AK-47, M4A4, M4A1-S, Galil AR, Famas, SG 553, AUG, Glock-18, P2000, USP-S, P250, CZ75-Auto, Tec-9, Desert Eagle, R8 Revolver, P90, MP7, UMP-45, PP-Bizon, MAC-10, Nova, Sawed-Off, XM1014, Mag-7, Negev, M249, ZEUS x27.">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@pricempire" />
-    <meta name="Description" CONTENT="Pricempire.com API Documentation for over 40 marketplaces.">
+    <meta name="Description" CONTENT="Pricempire.com Prices API Documentation for over CS:GO 40 marketplaces.">
     <meta property="og:url" content="https://developers.pricempire.com/" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Pricempire.com API Documentation for over 40 marketplaces." />
-    <meta property="og:description" content="Pricempire.com API Documentation for over 40 marketplaces." />
+    <meta property="og:title" content="Pricempire.com Prices API Documentation." />
+    <meta property="og:description" content="Pricempire.com Prices API Documentation for over CS:GO 40 marketplaces." />
     <meta property="og:image" content="https://developers.pricempire.com/xxhdpi.png" />
     <link rel="canonical" href="https://developers.pricempire.com/" />
     <title>API Docs | Pricempire.com</title>
