--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
             development
             journey. Let's get started!
         </article>
+        <h2>
+            <a href="https://www.postman.com/pricempire/workspace/pricempire/collection/10252760-587d916b-e048-49b2-a796-446f76b26e51?action=share&creator=10252760"
+                target="_blank">Please
+                USE
+                POSTMAN for testing</a>
+        </h2>
     </div>
     <div id="swagger-ui"></div>
     <script src="https://unpkg.com/swagger-ui-dist@4.5.0/swagger-ui-bundle.js" crossorigin></script>
