--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <script src="https://unpkg.com/swagger-ui-dist@4.5.0/swagger-ui-bundle.js" crossorigin></script>
     <script>
         window.onload = () => {
-            $.getJSON('https://pricempire.com/api/v2/meta/providerKeys').then(keys => {
+            $.getJSON('https://api.pricempire.com/v2/meta/providerKeys').then(keys => {
 
                 keys = keys.filter(key => key !== 'buff_lastsale');
 
